--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,7 +56,7 @@ jobs:
           fail_ci_if_error: false
 
   build:
-    name: Build Docker Image
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push'
@@ -68,22 +68,48 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image
-        run: docker build -t helpdesk-platform:latest .
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ secrets.DOCKERHUB_USERNAME }}/helpdesk-platform
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/helpdesk-platform:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/helpdesk-platform:buildcache,mode=max
 
       - name: Test Docker image
         run: |
           docker run -d -p 3000:3000 --name test-container \
             -e MONGODB_URI=mongodb://host.docker.internal:27017/helpdesk \
             -e JWT_SECRET=test-secret \
-            helpdesk-platform:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/helpdesk-platform:latest
           sleep 10
           docker logs test-container
           docker stop test-container
           docker rm test-container
 
   deploy:
-    name: Deploy Application
+    name: Deploy to AWS EC2
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
@@ -92,11 +118,54 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy to production
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Add EC2 instance to known hosts
         run: |
-          echo "Deployment steps would go here"
-          echo "This could include:"
-          echo "- Pushing to container registry"
-          echo "- Updating Kubernetes manifests"
-          echo "- Triggering deployment pipeline"
-          echo "- Running health checks"
+          mkdir -p ~/.ssh
+          echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/ec2_key.pem
+          chmod 600 ~/.ssh/ec2_key.pem
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy to EC2
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+        run: |
+          ssh -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            # Update application
+            cd ~/helpdesk-platform || git clone https://github.com/${{ github.repository }}.git ~/helpdesk-platform
+            cd ~/helpdesk-platform
+            git pull origin main
+            
+            # Login to Docker Hub
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+            
+            # Pull latest image
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/helpdesk-platform:latest
+            
+            # Stop existing containers
+            docker-compose down || true
+            
+            # Start new containers
+            MONGODB_URI="${{ secrets.MONGODB_URI }}" \
+            JWT_SECRET="${{ secrets.JWT_SECRET }}" \
+            docker-compose -f docker-compose.prod.yml up -d
+            
+            # Clean up old images
+            docker image prune -f
+            
+            # Health check
+            sleep 10
+            curl -f http://localhost:3000/api/auth/me || exit 1
+          EOF
+
+      - name: Verify deployment
+        run: |
+          sleep 5
+          curl -f https://${{ secrets.EC2_HOST }}/api/auth/me || echo "Health check endpoint not accessible"
