--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "create-admin": "node scripts/create-admin.js",
+    "update-role": "node scripts/update-user-role.js"
   },
   "dependencies": {
     "next": "^14.0.4",
